[tool.poetry]
name = "first_test"
version = "0.1.0"
description = ""
authors = ["sopko.16 <sopko.16@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.3"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
